WE-20: added get for a user
